Omstrukturering av html och js-filer.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "parcel serve ./src/index.html ./src/protected.html",
-    "build": "parcel build ./src/index.html ./src/protected.html"
+    "start": "parcel serve ./src/index.html ./src/login.html ./src/logout.html ./src/protected.html ./src/register.html",
+    "build": "parcel build ./src/index.html ./src/login.html ./src/logout.html ./src/protected.html ./src/register.html"
   },
   "keywords": [],
   "author": "",
